[gd_scene load_steps=25 format=3 uid="uid://cko5lhefjavud"]

[ext_resource type="Texture2D" uid="uid://cudwg6th15hlm" path="res://art/enemy/Free City Enemies Pixel Art/2/Walk.png" id="1_3db3a"]
[ext_resource type="Script" path="res://ranged enemy.gd" id="1_w6l07"]
[ext_resource type="Texture2D" uid="uid://dg8i5urhfswxb" path="res://art/enemy/Free City Enemies Pixel Art/2/Attack.png" id="2_3f63c"]
[ext_resource type="Texture2D" uid="uid://vlip6uwbfcwi" path="res://art/enemy/Free City Enemies Pixel Art/2/Hurt.png" id="3_gluy6"]
[ext_resource type="Texture2D" uid="uid://hot4erafavk1" path="res://art/enemy/Free City Enemies Pixel Art/2/Death.png" id="4_cm3c8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vrwam"]
atlas = ExtResource("3_gluy6")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qjc4"]
atlas = ExtResource("3_gluy6")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd3ks"]
atlas = ExtResource("4_cm3c8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8htl0"]
atlas = ExtResource("4_cm3c8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gecd"]
atlas = ExtResource("4_cm3c8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0xuy"]
atlas = ExtResource("4_cm3c8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo5hl"]
atlas = ExtResource("4_cm3c8")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_17tif"]
atlas = ExtResource("4_cm3c8")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5t80"]
atlas = ExtResource("2_3f63c")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxena"]
atlas = ExtResource("2_3f63c")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_japkd"]
atlas = ExtResource("2_3f63c")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpygm"]
atlas = ExtResource("1_3db3a")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g020"]
atlas = ExtResource("1_3db3a")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d63ga"]
atlas = ExtResource("1_3db3a")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0blp1"]
atlas = ExtResource("1_3db3a")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg5qa"]
atlas = ExtResource("1_3db3a")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfrav"]
atlas = ExtResource("1_3db3a")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_3hx6m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrwam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qjc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd3ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8htl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gecd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0xuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo5hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17tif")
}],
"loop": true,
"name": &"Hurt + Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5t80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxena")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_japkd")
}],
"loop": true,
"name": &"Shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpygm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g020")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d63ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0blp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg5qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfrav")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8ltct"]
radius = 15.0
height = 84.0

[node name="Ranged Enemy" type="CharacterBody2D"]
position = Vector2(-9, 21)
collision_layer = 8
script = ExtResource("1_w6l07")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9, -22)
scale = Vector2(2.1875, 2.25)
sprite_frames = SubResource("SpriteFrames_3hx6m")
animation = &"Shoot"
frame_progress = 0.967002

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9, -10)
shape = SubResource("CapsuleShape2D_8ltct")

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2(27, 32)
target_position = Vector2(0, 3)

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-7, 32)
target_position = Vector2(0, 3)

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2(9, -13)
target_position = Vector2(300, 0)
collision_mask = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Muzzle Right" type="Marker2D" parent="."]
position = Vector2(48, -13)

[node name="Muzzle Left" type="Marker2D" parent="."]
position = Vector2(-30, -14)
scale = Vector2(2.1875, 2.25)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
